# Hish

./: .gitignore  .travis.yml  ChangeLog.md  Hish.cabal  LICENSE  README.md  hackage-docs.sh  stack.yaml
app/: Main.hs
src/: ANSICode.hs  Hish.hs  hish.hs
src/Hish/: ANSICode.hs  DarcsInfo.hs  GitInfo.hs  SysInfo.hs  VCS.hs
src/Hish/VCS/: Darcs.hs  Git.hs
