name:               Hish
version:            0.1
description:        Prompt program for Fish shell written in Haskell
author:             Yun-Yan Chi
maintainer:    	    jaiyalas@gmail.com
homepage:           https://github.com/jaiyalas/Hish
license:            BSD3
build-type:         Simple
cabal-version:      >= 1.12

executable hish
  default-language: Haskell2010
  hs-source-dirs:   src
  main-is:          Hish.hs
  ghc-options:      -O2
  build-depends: base      >= 4
               , MissingH  >= 1.2
               , process   >= 1.2
