Name:                   Hish
Version:                0.1.2.1
Author:                 Yun-Yan Chi
Maintainer:             jaiyalas@gmail.com
License:                BSD3
License-File:           LICENSE
-- Synopsis:
Description:            Generating a beautiful and useful prompt.
Homepage:               https://github.com/jaiyalas/Hish
Bug-reports:            https://github.com/jaiyalas/Hish/issues
Cabal-Version:          >= 1.12
Build-Type:             Simple
Extra-Source-Files:     README.md, ChangeLog.md, hackage-docs.sh
category:               Command Line, Console, Shell
--

library
  default-language: Haskell2010
  hs-source-dirs: src
  ghc-options: -w
  build-depends: base        >= 4.8
               , MissingH    >= 1.3
               , process     >= 1.3
               , time        >= 1.5
               , directory   >= 1.2.2
               , parsec      >= 3.1
  exposed-modules:
        Hish
        Hish.ANSICode
        Hish.SysInfo
        Hish.VCS

--
executable hish
  default-language: Haskell2010
  hs-source-dirs:   app
  main-is:          Main.hs
  ghc-options:      -w
  build-depends: base        >= 4.8   && < 5
               , Hish
            --    , MissingH    >= 1.3
            --    , parsec      >= 3.1
            --    , process     >= 1.3
            --    , time        >= 1.5
            --    , directory   >= 1.2
--
Source-Repository head
  Type:                 git
  location:             https://github.com/jaiyalas/Hish.git
